@@ -1,3 +1,7 @@
+2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-ast.c (pkl_struct_type_traverse): s/strtok/strtok_r/.
+
 2024-06-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-ast.c (pkl_struct_type_traverse): Exclude unnamed
